# CPP_HW

./: .gitignore  CMakeLists.txt  Task1.cpp
.cache/clangd/index/: AVLNode.cpp.F44AA0D8DF29C4DB.idx  AVLNode.h.890FAC254ECA3B85.idx  AVLTree.cpp.94E724895BA727BC.idx  AVLTree.h.BE8DFDE68C3DC3CB.idx  main.cpp.1F8934487D0A5CCA.idx  treap.cpp.9279981B21B4725F.idx  treap.h.B15EBA6862A41D0E.idx
task1/: AVLTree.cpp  AVLTree.h  CMakeLists.txt  main.cpp
task10/: CMakeLists.txt  MixIn.cpp  main.cpp
task11/: CMakeLists.txt  CompPrimes.hpp  CompilePrimes.hpp  main.cpp
task13/: CMakeLists.txt  generic_func.hpp  main.cpp
task14/: CMakeLists.txt  main.cpp  static_checks.hpp
task15/: CMakeLists.txt  container.hpp  main.cpp
task2/: CMakeLists.txt  Task2.cpp  framework.cpp  main.cpp
task5/: CMakeLists.txt  main.cpp  scopedPointer.cpp
task6/: CMakeLists.txt  main.cpp  matrix_multiplication.cl  squareMatrix.cpp  squareMatrix.h
task7/: CMakeLists.txt  expression.cpp  main.cpp
task8/: CMakeLists.txt  IO.hpp  bufferedIO.hpp  fileIO.cpp  main.cpp  stringIO.cpp
